# test-claude-mvp

./: .env  .env.example  .gitignore  .mcp.json  AI_PLAYBOOK.md  CLAUDE.md  Makefile  PLUGIN_MANIFEST.md  README.md
.claude/: settings.json  settings.local.json  workflow.md
.feedback/: baseline-20260331.txt  template-developer.yml  template-filled-1774966417-developer.yml  template-legal.yml  template-security.yml
.github/: COPILOT_GAP_NOTES.md  copilot-instructions.md
.serena/: project.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/v1/: auth.py  router.py
backend/app/audit/: service.py
backend/app/auth/: dependencies.py  jwt.py  plone_bridge.py  token_store.py
backend/app/db/: base.py
backend/app/db/models/: __init__.py  audit.py  tenant.py  user.py
backend/app/plugins/: __init__.py  loaders.py  manager.py  runtime.py
backend/app/quota/: __init__.py  quota_service.py  rate_limiter.py
backend/app/rbac/: middleware.py  permissions.py
backend/tests/: conftest.py  test_auth.py  test_context_builder.py  test_e2e_mock.py  test_mcp.py  test_mcp_full.py  test_model_layer.py  test_models.py  test_planner.py  test_planner_integration.py  test_plone_mcp.py  test_plugin_lifecycle.py  test_plugin_manager.py  test_plugin_runtime.py  test_quota.py  test_rag.py  test_rag_pipeline.py  test_rbac.py  test_schema.py  test_security_review.py
benchmark/: README.md  SWE_AGENT_EVALUATION.md  capture-session-metrics.sh  compare.sh  verify-docs.sh  (+6 more)
(+288 files in other folders)
